--- a/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/NodeViewStyle.uss
+++ b/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/NodeViewStyle.uss
@@ -90,11 +90,11 @@
 }
 
 .action #input {
-    background-color: rgba(142, 68, 173, 255);
+    background-color: rgba(231, 76, 60, 255);
 }
 
 .composite #input {
-    background-color: rgba(127, 140, 141, 255);
+    background-color: rgba(99, 99, 99, 255);
 }
 
 .decorator #input {
@@ -103,4 +103,8 @@
 
 .inactive #contents {
     opacity: 0.5;
+}
+
+.root #input {
+    min-height: 20px;
 }
