--- a/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/BehaviourTreeEditor.uxml
@@ -11,7 +11,7 @@
             </ui:VisualElement>
             <ui:VisualElement style="position: absolute; bottom: 0; width: 100%; height: 50%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 2px;">
                 <ui:Label text="Blackboard" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
-                <ui:IMGUIContainer name="blackboard" class="view" />
+                <ui:IMGUIContainer name="blackboard" class="view" style="flex-grow: 1;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="right-panel">
