--- a/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/BehaviourTreeEditor.uxml
@@ -3,7 +3,7 @@
     <uie:Toolbar>
         <uie:ToolbarMenu display-tooltip-when-elided="true" text="Assets " />
     </uie:Toolbar>
-    <Derrixx.BehaviourTrees.Editor.SplitView fixed-pane-initial-dimension="200">
+    <Derrixx.BehaviourTrees.Editor.SplitView fixed-pane-initial-dimension="300">
         <ui:VisualElement name="left-panel" style="width: 300px;">
             <ui:VisualElement name="inspector">
                 <ui:Label text="Inspector" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
@@ -11,7 +11,7 @@
             </ui:VisualElement>
             <ui:VisualElement style="position: absolute; bottom: 0; width: 100%; height: 50%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 2px;">
                 <ui:Label text="Blackboard" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
-                <ui:IMGUIContainer name="blackboard" class="view" style="flex-grow: 1;" />
+                <ui:IMGUIContainer name="blackboard" class="view" style="flex-wrap: wrap-reverse; flex-direction: column; flex-shrink: 0;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="right-panel">
