--- a/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/NodeView.uxml
+++ b/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/UIBuilder/NodeView.uxml
@@ -21,5 +21,5 @@
         </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="selection-border" picking-mode="Ignore" />
-    <ui:Label text="1" display-tooltip-when-elided="true" name="execution-order" style="background-color: rgb(150, 150, 150); border-top-left-radius: 50px; border-bottom-left-radius: 50px; border-top-right-radius: 50px; border-bottom-right-radius: 50px; width: 20px; height: 20px; -unity-text-align: middle-center; color: rgb(255, 255, 255); position: absolute; top: auto; left: auto; right: -12px;" />
+    <ui:Label text="1" display-tooltip-when-elided="true" name="execution-order" picking-mode="Ignore" tooltip="The order in which this node will be executed" style="background-color: rgb(150, 150, 150); border-top-left-radius: 50px; border-bottom-left-radius: 50px; border-top-right-radius: 50px; border-bottom-right-radius: 50px; width: 20px; height: 20px; -unity-text-align: middle-center; color: rgb(255, 255, 255); position: absolute; top: auto; left: auto; right: -12px;" />
 </ui:UXML>
