--- a/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Assets/Plugins/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
@@ -10,7 +10,9 @@
             </ui:VisualElement>
             <ui:VisualElement style="position: absolute; bottom: 0; width: 100%; height: 50%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 2px;">
                 <ui:Label text="Blackboard" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
-                <ui:IMGUIContainer name="blackboard" class="view" style="flex-wrap: wrap-reverse; flex-direction: column; flex-shrink: 0;" />
+                <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" style="flex-grow: 1;">
+                    <ui:IMGUIContainer name="blackboard" class="view" style="flex-wrap: wrap; flex-direction: column; overflow: visible; flex-grow: 1; flex-shrink: 1;" />
+                </ui:ScrollView>
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="right-panel">
