--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
@@ -2,8 +2,14 @@
     <uie:Toolbar>
         <uie:ToolbarMenu display-tooltip-when-elided="true" text="Assets " />
     </uie:Toolbar>
-    <Derrixx.BehaviourTrees.Editor.SplitView fixed-pane-initial-dimension="300">
+    <Derrixx.BehaviourTrees.Editor.SplitView fixed-pane-initial-dimension="300" fixed-pane-index="1">
         <ui:VisualElement name="left-panel" style="width: 300px;">
+            <Derrixx.BehaviourTrees.Editor.BehaviourTreeView focusable="true" style="flex-direction: column-reverse; flex-grow: 1;">
+                <ui:Label text="BEHAVIOUR TREE" display-tooltip-when-elided="true" picking-mode="Ignore" style="-unity-text-align: lower-right; opacity: 0.3; font-size: 40px; -unity-font-style: bold; white-space: nowrap; top: auto; position: absolute; left: auto; right: 15px; bottom: 20px;" />
+                <ui:Label text="Behaviour Tree Name" display-tooltip-when-elided="true" name="tree-name" style="background-color: rgb(32, 32, 32); -unity-text-align: middle-center; height: 23px; font-size: 16px;" />
+            </Derrixx.BehaviourTrees.Editor.BehaviourTreeView>
+        </ui:VisualElement>
+        <ui:VisualElement name="right-panel">
             <ui:VisualElement name="inspector">
                 <ui:Label text="Inspector" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
                 <Derrixx.BehaviourTrees.Editor.InspectorView class="view" />
@@ -14,12 +20,6 @@
                     <ui:IMGUIContainer name="blackboard" class="view" style="flex-wrap: wrap; flex-direction: column; overflow: visible; flex-grow: 1; flex-shrink: 1;" />
                 </ui:ScrollView>
             </ui:VisualElement>
-        </ui:VisualElement>
-        <ui:VisualElement name="right-panel">
-            <Derrixx.BehaviourTrees.Editor.BehaviourTreeView focusable="true" style="flex-direction: column-reverse; flex-grow: 1;">
-                <ui:Label text="BEHAVIOUR TREE" display-tooltip-when-elided="true" picking-mode="Ignore" style="-unity-text-align: lower-right; opacity: 0.3; font-size: 40px; -unity-font-style: bold; white-space: nowrap; top: auto; position: absolute; left: auto; right: 15px; bottom: 20px;" />
-                <ui:Label text="Behaviour Tree Name" display-tooltip-when-elided="true" name="tree-name" style="background-color: rgb(32, 32, 32); -unity-text-align: middle-center; height: 23px; font-size: 16px;" />
-            </Derrixx.BehaviourTrees.Editor.BehaviourTreeView>
         </ui:VisualElement>
     </Derrixx.BehaviourTrees.Editor.SplitView>
 </ui:UXML>
