--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <uie:Toolbar>
-        <uie:ToolbarMenu display-tooltip-when-elided="true" text="Assets " />
+        <uie:ToolbarMenu display-tooltip-when-elided="true" text="File" />
     </uie:Toolbar>
     <Derrixx.BehaviourTrees.Editor.SplitView fixed-pane-initial-dimension="300" fixed-pane-index="1">
         <ui:VisualElement name="left-panel" style="width: 300px;">
