--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/NodeView.uxml
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/NodeView.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-    <Style src="NodeViewStyle.uss" />
+    <Style src="project://database/Packages/com.derrixx.behaviourtrees/Editor/Resources/NodeViewStyle.uss?fileID=7433441132597879392&amp;guid=bf2a6f39832fbff459aa8163d94ee839&amp;type=3#NodeViewStyle" />
     <ui:VisualElement name="node-state" />
     <ui:VisualElement name="node-border" style="overflow: visible;">
         <ui:VisualElement name="contents">
@@ -21,5 +21,5 @@
         </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="selection-border" picking-mode="Ignore" />
-    <ui:Label text="1" display-tooltip-when-elided="true" name="execution-order" picking-mode="Ignore" tooltip="The order in which this node will be executed" style="background-color: rgb(150, 150, 150); border-top-left-radius: 50px; border-bottom-left-radius: 50px; border-top-right-radius: 50px; border-bottom-right-radius: 50px; width: 20px; height: 20px; -unity-text-align: middle-center; color: rgb(255, 255, 255); position: absolute; top: auto; left: auto; right: -12px;" />
+    <ui:Label text="1" display-tooltip-when-elided="true" name="execution-order" picking-mode="Ignore" tooltip="The order in which this node will be executed" style="background-color: rgb(150, 150, 150); border-top-left-radius: 50px; border-bottom-left-radius: 50px; border-top-right-radius: 50px; border-bottom-right-radius: 50px; width: 18px; height: 18px; -unity-text-align: middle-center; color: rgb(255, 255, 255); position: absolute; top: -5px; left: auto; right: -12px;" />
 </ui:UXML>
