--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/NodeViewStyle.uss
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/NodeViewStyle.uss
@@ -105,10 +105,6 @@
     opacity: 0.5;
 }
 
-.root #input {
-    min-height: 20px;
-}
-
 .inactive #execution-order {
     display: none;
 }
@@ -148,4 +144,8 @@
 
 #title-label {
     text-shadow: 0.5px 0.5px 0 rgba(0, 0, 0, 0.3);
+}
+
+Label {
+    margin-left: 2.5px;
 }
