--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Editor/Resources/BehaviourTreeEditor.uxml
@@ -12,7 +12,7 @@
         <ui:VisualElement name="right-panel">
             <ui:VisualElement name="inspector">
                 <ui:Label text="Inspector" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
-                <Derrixx.BehaviourTrees.Editor.InspectorView class="view" />
+                <Derrixx.BehaviourTrees.Editor.InspectorView class="view" style="flex-grow: 1;" />
             </ui:VisualElement>
             <ui:VisualElement style="position: absolute; bottom: 0; width: 100%; height: 50%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 2px;">
                 <ui:Label text="Blackboard" display-tooltip-when-elided="true" enable-rich-text="false" style="background-color: rgb(32, 32, 32);" />
